--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'groovy'
 dependencies {
     compile gradleApi()
     compile localGroovy()
-    compile project(':gradle-imagemagick')
+    compile project(':imagemagick')
 }
 
 apply plugin: 'maven'
