--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,14 @@
 apply plugin: 'groovy'
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     compile gradleApi()
     compile localGroovy()
     compile project(':imagemagick')
+    testCompile 'org.spockframework:spock-core:0.7-groovy-1.8'
 }
 
 apply plugin: 'maven'
