--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,13 @@ apply plugin: 'groovy'
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
     compile gradleApi()
     compile localGroovy()
-    compile project(':imagemagick')
+    compile 'com.eowise:gradle-imagemagick:0.1.0-SNAPSHOT'
     testCompile 'org.spockframework:spock-core:0.7-groovy-1.8'
 }
 
