--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 
 
 group = 'com.eowise'
-version = '0.5.0-SNAPSHOT'
+version = '0.5.0'
 
 signing {
     sign configurations.archives
