--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ artifacts {
 }
 
 group = 'com.eowise'
-version = '0.5.0'
+version = '0.6.0-SNAPSHOT'
 
 signing {
     sign configurations.archives
