--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'signing'
 
 repositories {
     mavenCentral()
+    mavenLocal()
     maven {
         url 'https://oss.sonatype.org/content/repositories/releases/'
     }
@@ -12,7 +13,7 @@ repositories {
 dependencies {
     compile gradleApi()
     compile localGroovy()
-    compile 'com.eowise:gradle-imagemagick:0.3.0'
+    compile 'com.eowise:gradle-imagemagick:0.4.0'
     testCompile 'org.spockframework:spock-core:0.7-groovy-1.8'
 }
 
@@ -33,7 +34,7 @@ artifacts {
 }
 
 group = 'com.eowise'
-version = '0.6.1'
+version = '0.7.0'
 
 signing {
     sign configurations.archives
